css overflow property changed to "auto" - so it works in firefox and other browsers correctly

--- a/static/css/overwrite.css
+++ b/static/css/overwrite.css
@@ -369,7 +369,7 @@ input[type="radio"] label {
 
 #edit_pro_details .control-group {
 	margin-bottom: 10px;
-	overflow: overlay;
+	overflow: auto;
 }
 
 .form-warning {
